# newscompare

./: .gitignore  .newscompare_compare_checkpoint.json  IMPLEMENTATION_GUIDELINES.md  README.md  config.example.yaml  config.yaml  link_do_repozytorium.txt  newscompare.db-journal  newscompare.db.old  pyproject.toml  todo.md
docs/: 5.2-zalozenia-techniczne.md  ANALYSIS_PIPELINE.md  PIPELINE.md
scripts/: pipeline_analysis.sh
src/newscompare/: __init__.py  article_extractor.py  claims_util.py  cli.py  compare.py  compare_checkpoint.py  compare_llm.py  compare_pair_heuristic.py  config.py  embeddings.py  exceptions.py  export_bundle.py  feed_fetcher.py  gdelt_ingest.py  grouping.py  histogram_report.py  llm_dataset.py  logging_util.py  storage.py  story_schema.py  topic_extraction.py  topic_verdict.py  translation.py
src/newscompare/web/: __init__.py  main.py
src/newscompare/web/templates/: index.html
tests/: __init__.py  test_compare.py  test_compare_checkpoint.py  test_compare_integration.py  test_config.py  test_export_bundle.py  test_feed_fetcher.py  test_gdelt_ingest.py  test_histogram_report.py  test_story_schema.py  test_topic_extraction_labels.py  test_topic_verdict.py
