[tool.poetry]
name = "newscompare"
version = "0.1.0"
description = "Compare news headlines and articles across RSS feeds; show agreement and conflict."
readme = "README.md"
authors = []
packages = [{ include = "newscompare", from = "src" }]

[tool.poetry.dependencies]
python = "^3.10"
feedparser = "^6.0"
httpx = "^0.27"
goose3 = "^3.1"
pyyaml = "^6.0"
click = "^8.1"
rich = "^13.0"
numpy = "^1.26"
scipy = "^1.12"
sentence-transformers = "^2.2"
langdetect = "^1.0"
ollama = { version = "^0.3", optional = true }
fastapi = { version = "^0.109", optional = true }
uvicorn = { version = "^0.27", optional = true }
jinja2 = { version = "^3.1", optional = true }

[tool.poetry.extras]
llm = ["ollama"]
web = ["fastapi", "uvicorn", "jinja2"]

[tool.poetry.group.dev.dependencies]
pytest = "^7.4"
pytest-cov = "^4.1"
black = "^23.0"
isort = "^5.12"

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.isort]
profile = "black"
line_length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
    "slow: marks tests as slow (real embeddings, optional run with -m 'not slow')",
]

[tool.poetry.scripts]
newscompare = "newscompare.cli:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
